Avoid flicker effect

--- a/hypha/static_src/src/app/src/containers/FlagContainer/style.scss
+++ b/hypha/static_src/src/app/src/containers/FlagContainer/style.scss
@@ -4,4 +4,5 @@
 
 .flag-button{
     line-height: normal;
+    height: 40px;
 }
